crates/reze_compiler/tests/snapshots/snapshots__for_list.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { For } from \"reze-js\";\nconst a = <ul><For each={rows()} fallback={<li>none</li>}>{(row, i) => <li>{i()}</li>}</For></ul>;\nconst b = <For each={rows()} key={(row) => row.id}>{(row) => <li>{row().name}</li>}</For>;"
---
import { For } from "reze-js";
import { template as _$template, insert as _$insert, list as _$list } from "reze-js";
const a = (() => {
  var _el$ = _$template("<ul>");
  _$insert(_el$, _$list(() => rows(), (row, i) => {
  var _el$2 = _$template("<li>");
  _$insert(_el$2, i);
  return _el$2;
}, () => _$template("<li>none")));
  return _el$;
})();
const b = _$list(() => rows(), (row) => {
  var _el$3 = _$template("<li>");
  _$insert(_el$3, () => row().name);
  return _el$3;
}, undefined, (row) => row.id);
