crates/reze_compiler/tests/snapshots/snapshots__fragments.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <>{a()}<b />text</>;\nconst b = <></>;\nconst c = <>{x}</>;"
---
import { template as _$template } from "reze-js";
const a = [a, _$template("<b>"), "text"];
const b = [];
const c = x;
