crates/reze_compiler/tests/snapshots/snapshots__keyed_rows.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { For } from \"reze-js\";\nconst a = <For each={rows()} keyed={(r) => r.id}>{(row, i) => <li class={row().id} title={`#${row().id}`} onClick={() => pick(row().id)}>{row().id}{row().name}{row().id.length}{row()?.id}{cond() ? row().id : 0}</li>}</For>;\nconst b = <For each={rows()} keyed={(r) => r.id} children={(row) => <li>{row().id}</li>} />;\nconst c = <For each={rows()} keyed={(r) => r.name}>{(row) => <li>{row().id}</li>}</For>;\nconst d = <For each={rows()}>{(row) => <li>{row.id}</li>}</For>;\nconst e = <For each={rows()} keyed={(r) => r.id}>{(row) => <li>{(row().id = 5)}{row().id++}{delete row().id}{[row().id] = xs}{row(1).id}</li>}</For>;\nconst f = <For each={rows()} keyed={(r) => r.id}>{(row) => { row = other; return <li>{row().id}</li>; }}</For>;"
---
import { For } from "reze-js";
import { list as _$list, template as _$template, className as _$className, setAttribute as _$setAttribute, append as _$append, insert as _$insert, delegateEvents as _$delegateEvents } from "reze-js";
const a = _$list(() => rows(), (row, i) => {
  var _el$ = _$template("<li>");
  _$className(_el$, row().id);
  _$setAttribute(_el$, "title", `#${row().id}`);
  _el$.$$click = () => pick(row().id);
  _$append(_el$, row().id);
  _$append(_el$, () => row().name);
  _$append(_el$, () => row().id.length);
  _$append(_el$, () => row()?.id);
  _$append(_el$, () => cond() ? row().id : 0);
  return _el$;
}, undefined, (r) => r.id);
const b = _$list(() => rows(), (row) => {
  var _el$2 = _$template("<li>");
  _$insert(_el$2, row().id);
  return _el$2;
}, undefined, (r) => r.id);
const c = _$list(() => rows(), (row) => {
  var _el$3 = _$template("<li>");
  _$insert(_el$3, () => row().id);
  return _el$3;
}, undefined, (r) => r.name);
const d = _$list(() => rows(), (row) => {
  var _el$4 = _$template("<li>");
  _$insert(_el$4, () => row.id);
  return _el$4;
});
const e = _$list(() => rows(), (row) => {
  var _el$5 = _$template("<li>");
  _$append(_el$5, () => (row().id = 5));
  _$append(_el$5, () => row().id++);
  _$append(_el$5, () => delete row().id);
  _$append(_el$5, () => [row().id] = xs);
  _$append(_el$5, () => row(1).id);
  return _el$5;
}, undefined, (r) => r.id);
const f = _$list(() => rows(), (row) => { row = other; {
  var _el$6 = _$template("<li>");
  _$insert(_el$6, () => row().id);
  return _el$6;
} }, undefined, (r) => r.id);
_$delegateEvents(["click"]);
