crates/reze_compiler/tests/snapshots/snapshots__link_constant_expression.snap
---
source: crates/reze_compiler/tests/snapshots.rs
assertion_line: 207
expression: "const to = \"/\" + page;\nconst a = <a href={to}>go</a>;"
---
import { template as _$template, setAttribute as _$setAttribute } from "reze-js";
import { link as _$link } from "@rezejs/router";
const to = "/" + page;
const a = (() => {
  var _el$ = _$template("<a>go");
  _$setAttribute(_el$, "href", to);
  _$link(_el$);
  return _el$;
})();
