crates/reze_compiler/tests/snapshots/snapshots__link_dynamic.snap
---
source: crates/reze_compiler/tests/snapshots.rs
assertion_line: 207
expression: "const a = <a href={url()} title={t()}>go</a>;\nconst b = <a href={`/u/${id()}`} />;"
---
import { template as _$template, renderEffect as _$renderEffect, setAttribute as _$setAttribute } from "reze-js";
import { link as _$link } from "@rezejs/router";
const a = (() => {
  var _el$ = _$template("<a>go");
  _$link(_el$, url);
  _$renderEffect(() => _$setAttribute(_el$, "title", t()));
  return _el$;
})();
const b = (() => {
  var _el$2 = _$template("<a>");
  _$link(_el$2, () => `/u/${id()}`);
  return _el$2;
})();
